--- a/api/qsharp/Microsoft.Quantum.MachineLearning.yml
+++ b/api/qsharp/Microsoft.Quantum.MachineLearning.yml
@@ -1,7 +1,7 @@
 ### YamlMime:QSharpNamespace
 uid: microsoft.quantum.machinelearning
 name: Microsoft.Quantum.MachineLearning
-summary: " # <a name=\"summary\"></a>总结\n 此命名空间提供量程机器学习应用程序中使用的函数和操作。\n\n # <a name=\"references\"></a>reference\n - Maria Schuld、Alex Bocharov、Krysta Svore、Nathan Wiebe、\"以线路为中心的量程分类器\" https://arxiv.org/abs/1804.00633 。"
+summary: " # <a name=\"summary\"></a>总结\n 此命名空间提供量程机器学习应用程序中使用的函数和操作。\n\n # <a name=\"references\"></a>参考\n - Maria Schuld、Alex Bocharov、Krysta Svore、Nathan Wiebe、\"以线路为中心的量程分类器\" https://arxiv.org/abs/1804.00633 。"
 functions:
 - uid: microsoft.quantum.machinelearning.approximateinputencoder
   summary: 给定一组系数和公差后，将返回状态准备操作，以便将每个系数准备为计算基础状态的相应波幅，直到达到给定的公差。
@@ -20,7 +20,7 @@ functions:
 - uid: microsoft.quantum.machinelearning.inputencoder
   summary: 给定一组系数和公差后，将返回状态准备操作，以便将每个系数准备为计算基础状态的相应波幅。
 - uid: microsoft.quantum.machinelearning.localrotationslayer
-  summary: 返回沿给定轴的不受控制的（单 qubit）旋转的数组，对寄存器中的每个 qubit 进行一次旋转，由不同的模型参数参数化。
+  summary: 返回一组不受 (控制的 qubit) 沿给定轴旋转的数组，并在寄存器中的每个 qubit 之间进行一次旋转，由不同的模型参数参数化。
 - uid: microsoft.quantum.machinelearning.misclassifications
   summary: 给定一组推断标签和一组正确标签，返回每组标签不同的位置的索引。
 - uid: microsoft.quantum.machinelearning.nmisclassifications
@@ -64,9 +64,9 @@ newtypes:
 - uid: microsoft.quantum.machinelearning.validationresults
   summary: 根据一组示例验证了分类器后得到的结果。
 metadata:
-  ms.openlocfilehash: 85728552e323a640d5abd78f6a2bada5c37e6919
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: 8d36a7ce9650ab42103e2b22e1e2ec5948d1a0ac
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85885251"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89340028"
