--- a/api/qsharp/microsoft.quantum.amplitudeamplification.ampamprotationtoreflectionphases.yml
+++ b/api/qsharp/microsoft.quantum.amplitudeamplification.ampamprotationtoreflectionphases.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.amplitudeamplification.ampamprotationtoreflectionphases
 name: AmpAmpRotationToReflectionPhases
 type: function
-namespace: Microsoft.Quantum.AmplitudeAmplification
+namespace: microsoft.quantum.amplitudeamplification
 summary: AmpAmpRotationToReflectionPhases 已被弃用。 请改用 @"microsoft.quantum.amplitudeamplification.rotationphasesasreflectionphases"。
 syntax: 'function AmpAmpRotationToReflectionPhases (rotPhases : Microsoft.Quantum.AmplitudeAmplification.RotationPhases) : Microsoft.Quantum.AmplitudeAmplification.ReflectionPhases'
 input:
@@ -15,9 +15,9 @@ output:
   types:
   - uid: microsoft.quantum.amplitudeamplification.reflectionphases
 metadata:
-  ms.openlocfilehash: 54392ba3ad8eb98ad63f8c9f465716099b4ec289
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e0b27c371f3b203793772a5a7ffa40362fc20b35
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82673036"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89339671"
