--- a/api/qsharp/microsoft.quantum.canon.asserthighestbit.yml
+++ b/api/qsharp/microsoft.quantum.canon.asserthighestbit.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.asserthighestbit
 name: AssertHighestBit
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: AssertHighestBit 已被弃用。 请改用 @"microsoft.quantum.arithmetic.assertmostsignificantbit"。
 syntax: 'operation AssertHighestBit (value : Result, number : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
 input:
@@ -22,9 +22,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: 8983d607609b4714d74c77238d94f2cb85bef40b
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 68aa709387a9a15e41e39280cab35acf1b1b32a9
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674374"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89357011"
