--- a/api/qsharp/microsoft.quantum.canon.conjugatedbyc.yml
+++ b/api/qsharp/microsoft.quantum.canon.conjugatedbyc.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.conjugatedbyc
 name: ConjugatedByC
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: 给定的外部和内部操作返回一个新的操作，该操作将由外部操作词干内部操作。
 remarks: 外部操作始终被认为是 adjointable 的，但不需要控制以便使组合操作可控制。
 syntax: "function ConjugatedByC (outerOperation : ('T => Unit is Adj), innerOperation : ('T => Unit is Ctl)) : ('T => Unit is Ctl)"
@@ -59,9 +59,9 @@ seeAlso:
 - conjugatedbyca
 - applywith
 metadata:
-  ms.openlocfilehash: 3a64d3c0b6f7366bca63da41ac6668ea20ed34ac
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 4545faa8f4d2a6ee83f8c3c0ff87ae0d5bec63b2
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82675769"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356671"
