--- a/api/qsharp/microsoft.quantum.canon.embedpauli.yml
+++ b/api/qsharp/microsoft.quantum.canon.embedpauli.yml
@@ -2,10 +2,10 @@
 uid: microsoft.quantum.canon.embedpauli
 name: EmbedPauli
 type: function
-namespace: Microsoft.Quantum.Canon
-summary: 给定 qubit Pauli 运算符和 qubit 的索引后，将返回一个多 qubit Pauli 运算符，该运算符具有给定的单一 qubit 运算符，位于该索引处和`PauliI`其他每个索引处。
+namespace: microsoft.quantum.canon
+summary: 给定 qubit Pauli 运算符和 qubit 的索引后，将返回一个多 qubit Pauli 运算符，该运算符具有给定的单一 qubit 运算符，位于该索引处和 `PauliI` 其他每个索引处。
 examples: >-
-  获取阵列`[PauliI, PauliI, PauliX, PauliI]`：
+  获取阵列 `[PauliI, PauliI, PauliX, PauliI]` ：
 
 
   ```qsharp
@@ -22,7 +22,7 @@ input:
     isPrimitive: true
     uid: Pauli
   - name: location
-    summary: 一个索引`output[location] == pauli`，其中`output` ，是此函数的输出。
+    summary: 一个索引 `output[location] == pauli` ，其中， `output` 是此函数的输出。
     isPrimitive: true
     uid: Int
   - name: n
@@ -36,9 +36,9 @@ output:
     isPrimitive: true
     uid: Pauli
 metadata:
-  ms.openlocfilehash: df9cff23b6a7255ec57e944fd1bed140ff18560a
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: a5a6dbabfe51f52da9eb63d23bfbf1cf7ee03370
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82675590"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356365"
