--- a/api/qsharp/microsoft.quantum.canon.assertlessthanphasele.yml
+++ b/api/qsharp/microsoft.quantum.canon.assertlessthanphasele.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.assertlessthanphasele
 name: AssertLessThanPhaseLE
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: AssertLessThanPhaseLE 已被弃用。 请改用 @"microsoft.quantum.arithmetic.assertphaselessthan"。
 syntax: 'operation AssertLessThanPhaseLE (value : Int, number : Microsoft.Quantum.Arithmetic.PhaseLittleEndian) : Unit'
 input:
@@ -22,9 +22,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: dc9b007c139323d5b67bf55e797c81bec9e49a77
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 6270a879fb9b8b069d4d7909c61289ac20bb6c25
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82674327"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356994"
