--- a/api/qsharp/microsoft.quantum.canon.assertphase.yml
+++ b/api/qsharp/microsoft.quantum.canon.assertphase.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.assertphase
 name: AssertPhase
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: AssertPhase 已被弃用。 请改用 @"microsoft.quantum.diagnostics.assertphase"。
 syntax: 'operation AssertPhase (expected : Double, qubit : Qubit, tolerance : Double) : Unit'
 input:
@@ -23,9 +23,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 17fa383f5fd8e710f8c83920abe0727663506bfb
-  ms.sourcegitcommit: 75c4edc7c410cc63dc8352e2a5bef44b433ed188
+  ms.openlocfilehash: 71ee7e7435054314e30aaebd03cb7faa2134f62d
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/25/2020
-  ms.locfileid: "88863291"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356977"
