--- a/api/qsharp/microsoft.quantum.canon.bounda.yml
+++ b/api/qsharp/microsoft.quantum.canon.bounda.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.bounda
 name: BoundA
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   给定针对单个输入的操作数组时，将生成一个按顺序执行每个给定操作的新操作。
 
-  修饰符`A`指示数组中的所有操作都是 adjointable。
+  修饰符 `A` 指示数组中的所有操作都是 adjointable。
 examples: >-
   以下项是等效的：
 
@@ -20,7 +20,7 @@ examples: >-
   ```
 
 
-  and
+  和
 
 
   ```qsharp
@@ -67,9 +67,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.bound
 metadata:
-  ms.openlocfilehash: a965cd80372dbec05810739ed3774b886dc0aa53
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: d6dc7dbec4ee57956a243fcc5aa61be330d64fb9
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82676005"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356960"
