--- a/api/qsharp/microsoft.quantum.canon.boundc.yml
+++ b/api/qsharp/microsoft.quantum.canon.boundc.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.boundc
 name: BoundC
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   给定针对单个输入的操作数组时，将生成一个按顺序执行每个给定操作的新操作。
 
-  修饰符`C`指示数组中的所有操作都可控制。
+  修饰符 `C` 指示数组中的所有操作都可控制。
 examples: >-
   以下项是等效的：
 
@@ -20,7 +20,7 @@ examples: >-
   ```
 
 
-  and
+  和
 
 
   ```qsharp
@@ -67,9 +67,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.bound
 metadata:
-  ms.openlocfilehash: 50129f54048e9b6b9e50970d581a0b72935a697e
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 07625092442a9c59cc8fa6799e3a43ea8c79bd5a
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82675965"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356909"
