--- a/api/qsharp/microsoft.quantum.canon.ccontrolleda.yml
+++ b/api/qsharp/microsoft.quantum.canon.ccontrolleda.yml
@@ -2,11 +2,11 @@
 uid: microsoft.quantum.canon.ccontrolleda
 name: CControlledA
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
-  给定操作 op，返回一个新操作，该操作将应用操作（如果古典控制位为 true）。 如果`false`为，则不执行任何操作。
+  给定操作 op，返回一个新操作，该操作将应用操作（如果古典控制位为 true）。 如果为，则不 `false` 执行任何操作。
 
-  修饰符`A`指示操作为 adjointable。
+  修饰符 `A` 指示操作为 adjointable。
 syntax: "function CControlledA (op : ('T => Unit is Adj)) : ((Bool, 'T) => Unit is Adj)"
 input:
   content: "(op : ('T => Unit is Adj))"
@@ -47,9 +47,9 @@ typeParameters:
 seeAlso:
 - microsoft.quantum.canon.ccontrolled
 metadata:
-  ms.openlocfilehash: 12349ee5fe56d0209f510900f47cf255a7adc4d9
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: c8fd37d3477bcde20c73625179b1bc304eac11c7
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82675897"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356807"
