--- a/api/qsharp/microsoft.quantum.canon.conjugatedby.yml
+++ b/api/qsharp/microsoft.quantum.canon.conjugatedby.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.conjugatedby
 name: ConjugatedBy
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: 给定的外部和内部操作返回一个新的操作，该操作将由外部操作词干内部操作。
 remarks: 外部操作始终被认为是 adjointable 的，但不需要控制以便使组合操作可控制。
 syntax: "function ConjugatedBy (outerOperation : ('T => Unit is Adj), innerOperation : ('T => Unit)) : ('T => Unit)"
@@ -55,9 +55,9 @@ seeAlso:
 - conjugatedbyca
 - applywith
 metadata:
-  ms.openlocfilehash: 48db80c3b5e1d9cb07f81f742f97150e11034a4f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 3d71e48fd0595ca729018e00ea04ef140192e8ca
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82675806"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356705"
