--- a/api/qsharp/microsoft.quantum.canon.conjugatedbya.yml
+++ b/api/qsharp/microsoft.quantum.canon.conjugatedbya.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.conjugatedbya
 name: ConjugatedByA
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: 给定的外部和内部操作返回一个新的操作，该操作将由外部操作词干内部操作。
 remarks: 外部操作始终被认为是 adjointable 的，但不需要控制以便使组合操作可控制。
 syntax: "function ConjugatedByA (outerOperation : ('T => Unit is Adj), innerOperation : ('T => Unit is Adj)) : ('T => Unit is Adj)"
@@ -59,9 +59,9 @@ seeAlso:
 - conjugatedbyca
 - applywith
 metadata:
-  ms.openlocfilehash: 871df7ab58136f3566d052d83e8029b8d41aca01
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 386034315c089d7f2280e36fc3cf1be58640684c
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82675780"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356688"
