--- a/api/qsharp/microsoft.quantum.canon.controlledonbitstring.yml
+++ b/api/qsharp/microsoft.quantum.canon.controlledonbitstring.yml
@@ -2,14 +2,14 @@
 uid: microsoft.quantum.canon.controlledonbitstring
 name: ControlledOnBitString
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   如果控件注册状态对应于指定的位掩码，则返回在目标寄存器上应用 oracle 的单一操作。
 
 
-  此函数的输出是一个可以由单一转换 $U $ 进行表示的操作，此操作可由 \begin{align} U \ket{b_0 b_1 \cdots b_ {n-1}} \ket{\psi} = \ket{b_0 b_1 \cdots b_ {n-1}} \otimes \begin{cases} V \ket{\psi} & \textrm{if} （b_0 b_1 \cdots b_ {n-1}） = \texttt{bits} \\ \\ \ket{\psi} & \textrm{otherwise} \end{cases}，\end{align}，其中 $V $ 是表示操作操作的单一转换 `oracle` 。
+  此函数的输出是一个可以由单一转换 $U $ 进行表示的操作，此操作可由 \begin{align} U \ket{b_0 b_1 \cdots b_ {n-1}} \ket{\psi} = \ket{b_0 b_1 \cdots b_ {n-1}} \otimes \begin{cases} \ket{\psi} & \textrm{if} (b_0 b_1 \cdots b_ {n-1} ) = \texttt{bits} \\ \\ \ket{\psi} & \textrm{otherwise} \end{cases}，\end{align}，其中 $V $ 是表示操作操作的单一转换 `oracle` 。
 remarks: >-
-  给定的模式 `bits` 可能比更短 `controlRegister` ，在这种情况下，将忽略附加的 qubits （即，不会在 $ \ket {0} $ 和 $ \ket {1} $）上进行控制。
+  给定的模式 `bits` 可能比更短 `controlRegister` ，在这种情况下，将 (忽略附加的 qubits，而不会在 $ \ket {0} $ 和 $ \ket $) 上进行控制 {1} 。
 
   如果 `bits` 的长度超过 `controlRegister` ，则会引发错误。
 
@@ -36,7 +36,7 @@ examples: >-
   ```
 
 
-  and
+  和
 
 
   ```qsharp
@@ -50,7 +50,7 @@ examples: >-
   ```
 
 
-  下面的代码准备状态 $ \frac {1} {2} （\ket {00} {01} + \ket + \ket {10} + \ket {11} ） $：
+  以下代码准备状态 $ \frac {1} {2} ( \ket {00} -\ket {01} + \ket {10} + \ket {11}) $：
 
 
   ```qsharp
@@ -104,9 +104,9 @@ output:
     - Adjoint
     - Controlled
 metadata:
-  ms.openlocfilehash: 98bb8a9d5770e34257cd2fbc5456bcf70139af07
-  ms.sourcegitcommit: a3775921db1dc5c653c97b8fa8fe2c0ddd5261ff
+  ms.openlocfilehash: 3064af5cc25b8d5a63f57d62803b8484d2f93d2c
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/02/2020
-  ms.locfileid: "85885521"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356637"
