--- a/api/qsharp/microsoft.quantum.canon.delaya.yml
+++ b/api/qsharp/microsoft.quantum.canon.delaya.yml
@@ -2,16 +2,16 @@
 uid: microsoft.quantum.canon.delaya
 name: DelayA
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: >-
   应用给定操作，延迟。
 
 
   给定一个操作和一个对该操作的输入时，只要提供附加输入，就会应用该操作。
 
-  具体而言，表达式`Delay(op, arg, _)`是`op` `arg`在调用时应用于的操作。
+  具体而言，表达式 `Delay(op, arg, _)` 是 `op` 在调用时应用于的操作 `arg` 。
 
-  表达式`Delay(op,arg,_)`允许延迟的应用程序`op`。
+  表达式 `Delay(op,arg,_)` 允许延迟的应用程序 `op` 。
 syntax: "operation DelayA (op : ('T => Unit is Adj), arg : 'T, aux : Unit) : Unit"
 input:
   content: "(op : ('T => Unit is Adj), arg : 'T, aux : Unit)"
@@ -51,9 +51,9 @@ seeAlso:
 - microsoft.quantum.canon.delay
 - microsoft.quantum.canon.delayed
 metadata:
-  ms.openlocfilehash: d4119e1229ac193ab52ac56c37333560dbbedf9e
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 18d272b642a228edf90b05e5522ec85918a77732
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82680226"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356484"
