--- a/api/qsharp/microsoft.quantum.canon.delayedc.yml
+++ b/api/qsharp/microsoft.quantum.canon.delayedc.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.delayedc
 name: DelayedC
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: 返回应用给定自变量的给定操作的操作。
 syntax: "function DelayedC (op : ('T => Unit is Ctl), arg : 'T) : (Unit => Unit is Ctl)"
 input:
@@ -22,13 +22,13 @@ input:
     functors:
     - Controlled
   - name: arg
-    summary: 将操作`op`应用到的输入。
+    summary: 将操作应用到的输入 `op` 。
     uid: "'T"
     isLocal: true
 output:
   content: (Unit => Unit is Ctl)
   types:
-  - summary: 适用于`op`输入的新操作`arg`
+  - summary: 适用于输入的新操作 `op``arg`
     isOperation: true
     input:
       types:
@@ -47,9 +47,9 @@ seeAlso:
 - microsoft.quantum.canon.delayed
 - microsoft.quantum.canon.delay
 metadata:
-  ms.openlocfilehash: 909d645e2567e92ca8943188c580e6d942cefcda
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 5824fa31157b2e6b2cf8c1ea6ad3f69593f2be81
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82675634"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356382"
