--- a/api/qsharp/microsoft.quantum.canon.integerincrementle.yml
+++ b/api/qsharp/microsoft.quantum.canon.integerincrementle.yml
@@ -2,7 +2,7 @@
 uid: microsoft.quantum.canon.integerincrementle
 name: IntegerIncrementLE
 type: operation
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: IntegerIncrementLE 已被弃用。 请改用 @"microsoft.quantum.arithmetic.incrementbyinteger"。
 syntax: 'operation IntegerIncrementLE (increment : Int, target : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
 input:
@@ -22,9 +22,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: d815aa670f8bbaa2d3f0a63b70870b18ee93f528
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 77f5a388717688e6e0a21314b02fdfff4394c542
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82679177"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89356263"
