--- a/api/qsharp/microsoft.quantum.chemistry.jordanwigner.optimizedblockencodinggeneratorsystem.yml
+++ b/api/qsharp/microsoft.quantum.chemistry.jordanwigner.optimizedblockencodinggeneratorsystem.yml
@@ -2,24 +2,24 @@
 uid: microsoft.quantum.chemistry.jordanwigner.optimizedblockencodinggeneratorsystem
 name: OptimizedBlockEncodingGeneratorSystem
 type: function
-namespace: Microsoft.Quantum.Chemistry.JordanWigner
-summary: 将描述的 Hamiltonian 转换`JWOptimizedHTerms`为 Pauli `GeneratorSystem` `GeneratorIndex`的表示形式。
+namespace: microsoft.quantum.chemistry.jordanwigner
+summary: 将描述的 Hamiltonian 转换 `JWOptimizedHTerms` 为 `GeneratorSystem` Pauli 的表示形式 `GeneratorIndex` 。
 syntax: 'function OptimizedBlockEncodingGeneratorSystem (data : Microsoft.Quantum.Chemistry.JordanWigner.JWOptimizedHTerms) : Microsoft.Quantum.Chemistry.JordanWigner.OptimizedBEGeneratorSystem'
 input:
   content: '(data : Microsoft.Quantum.Chemistry.JordanWigner.JWOptimizedHTerms)'
   types:
   - name: data
-    summary: '`JWOptimizedHTerms`格式的 Hamiltonian 说明。'
+    summary: 格式的 Hamiltonian 说明 `JWOptimizedHTerms` 。
     uid: microsoft.quantum.chemistry.jordanwigner.jwoptimizedhterms
 output:
   content: Microsoft.Quantum.Chemistry.JordanWigner.OptimizedBEGeneratorSystem
   types:
-  - summary: Hamiltonian 的表示形式`GeneratorSystem`。
+  - summary: Hamiltonian 的表示形式 `GeneratorSystem` 。
     uid: microsoft.quantum.chemistry.jordanwigner.optimizedbegeneratorsystem
 metadata:
-  ms.openlocfilehash: 3a8354223ba4c5fe7c45d6b494f62aa5ceb41a38
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: d2fe71ccfcc25e80df51e5a2505073ec7da812a8
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82665233"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89339399"
